# lightrag-replication

./: .env.example  .gitignore  LICENSE  README.md  backend.py  chunk.py  core.py  extract.py  knowledge_graph.html  main.py  prompt.py  pyproject.toml  requirements.txt  storage.py  visual.py
dickens/: chunk_vectors.npy  entities.json  entity_vectors.json  entity_vectors.npy  graph.json  relation_vectors.json  relation_vectors.npy  relations.json
dickens_previous/: chunk_vectors.json  chunk_vectors.npy  chunks.json  entities.json  entity_vectors.json  entity_vectors.npy  graph.json  relation_vectors.json  relation_vectors.npy  relations.json
eval/: carol_eval_set.json  eval.py  eval_retrieval.py
